--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,16 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "docker"
+    directory: "/"
     schedule:
       interval: "daily"
+    registries:
+      - gcr
+
+registries:
+  gcr:
+    type: "docker-registry"
+    url: "https://us.gcr.io"
+    username: "${{ secrets.GCR_USERNAME }}"
+    password: "${{ secrets.GCR_PASSWORD }}"
