--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,11 +10,11 @@ updates:
     schedule:
       interval: "daily"
     registries:
-      - gcr
+      - google-container-registry
 
 registries:
-  gcr:
+  google-container-registry:
     type: "docker-registry"
-    url: "https://us.gcr.io"
+    url: "https://gcr.io"
     username: "${{ secrets.GCR_USERNAME }}"
     password: "${{ secrets.GCR_PASSWORD }}"
