--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,3 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
   - package-ecosystem: "docker"
@@ -10,11 +5,11 @@ updates:
     schedule:
       interval: "daily"
     registries:
-      - google-artifact-registry
+      - gcr
 
 registries:
-  google-artifact-registry:
+  gcr:
     type: "docker-registry"
-    url: "https://us.gcr.io"
+    url: "https://gcr.io"
     username: "${{ secrets.GCR_USERNAME }}"
     password: "${{ secrets.GCR_PASSWORD }}"
